# aizona_bist_hft

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  app_parameters.json  config.json  server_parameters.json  vcpkg-configuration.json  vcpkg.json
apps/: CMakeLists.txt  exchange_emulator.cpp  trading_client.cpp
benchmark/: CMakeLists.txt  dummy_benchmark.cpp
bist_config/: preprod_config.json  prodlike_config.json
cmake/: CompilerWarnings.cmake  Coverage.cmake  InterproceduralOptimization.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
lib/: CMakeLists.txt  constants.hpp  strong_type.hpp  types.hpp
lib/client/: CMakeLists.txt  market_data_client.cpp  market_data_client.hpp  order_entry_client.cpp  order_entry_client.hpp
lib/core/: CMakeLists.txt  l2_orderbook.hpp  order_manager.hpp  orderbook_builder.hpp
lib/network/: CMakeLists.txt  tcp_client.cpp  tcp_client.hpp  tcp_client_connection.cpp  tcp_client_connection.hpp  tcp_server.cpp  tcp_server.hpp  tcp_server_socket.cpp  tcp_server_socket.hpp  tcp_socket.cpp  tcp_socket.hpp  udp_socket.cpp  udp_socket.hpp
lib/parser/: itch_parser.hpp
lib/protocol/: CMakeLists.txt
lib/protocol/itch/: CMakeLists.txt  itch_add_order.hpp  itch_add_order_with_mpid.hpp  itch_combination_orderbook_leg.hpp  itch_equilibrium_price_update.hpp  itch_order_delete.hpp  itch_order_executed.hpp  itch_order_executed_with_price.hpp  itch_order_replace.hpp  itch_orderbook_directory.hpp  itch_orderbook_flush.hpp  itch_orderbook_state.hpp  itch_parser.cpp  itch_parser.hpp  itch_seconds.hpp  itch_short_sell_status.hpp  itch_system_event.hpp  itch_tick_size_table_entry.hpp  itch_trade.hpp
lib/protocol/moldudp64/: CMakeLists.txt  moldudp64_downstream_header.hpp  moldudp64_message_block.hpp
lib/protocol/ouch/: CMakeLists.txt  ouch_cancel_by_order_id.hpp  ouch_cancel_order.hpp  ouch_constants.hpp  ouch_enter_order.hpp  ouch_order_accepted.hpp  ouch_order_canceled.hpp  ouch_order_executed.hpp  ouch_order_rejected.hpp  ouch_order_replaced.hpp  ouch_replace_order.hpp  ouch_types.hpp
lib/protocol/soupbintcp/: CMakeLists.txt  soupbintcp_client_heartbeat.hpp  soupbintcp_end_of_session.hpp  soupbintcp_login_accepted.hpp  soupbintcp_login_rejected.hpp  soupbintcp_login_request.hpp  soupbintcp_logout_request.hpp  soupbintcp_sequenced_data.hpp  soupbintcp_server_heartbeat.hpp  soupbintcp_types.hpp  soupbintcp_unsequenced_data.hpp
lib/utility/: CMakeLists.txt  config_parser.hpp  overwrite_macros.hpp  quill_wrapper.cpp  quill_wrapper.hpp  thread.cpp  thread.hpp
src/: CMakeLists.txt  trading_client.cpp
test/: CMakeLists.txt  dummy_test.cpp  itch_parser_test.cpp
tools/: generate_dummy_moldudp64_pcap.py
